--- a/oyl/src/components/Container/Container.css
+++ b/oyl/src/components/Container/Container.css
@@ -1,29 +1,27 @@
 .container {
-    display: inline-flex;
-    margin-top: 5%;
-    margin-bottom: 20px;
-    flex-direction: column;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: flex;
-    background-color: #FFFFFF;
-  }
+  display: flex;
+  flex-direction: column;
+  margin-top: 5%;
+  margin-bottom: 20px;
+  position: relative;
+  width: 100%;
+  height: auto;
+  background-color: #FFFFFF;
+}
 
 .itemCont {
-    display: inline-flex;
-    flex-direction: column;
-    background-color: red;
-    color:black;
-    margin-top: 3%;
-    margin-bottom: 2%;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  color: black;
+  margin-top: 3%;
+  margin-bottom: 2%;
+}
 
-  }
-  .favoritosCont{
-    display: inline-flex;
+.favoritosCont {
+  flex: 1;
+  display: flex;
   flex-direction: column;
   background-color: #F4B1D2;
   margin-bottom: 2%;
-  }
-  
+}
