--- a/oyl/src/components/Container/Container.css
+++ b/oyl/src/components/Container/Container.css
@@ -6,22 +6,26 @@
   position: relative;
   width: 100%;
   height: auto;
-  background-color: #FFFFFF;
+  background-color: white;
 }
 
 .itemCont {
   flex: 1;
   display: flex;
-  flex-direction: column;
-  color: black;
+  width: 1020px;
   margin-top: 3%;
+  margin-left: 2.5%;
   margin-bottom: 2%;
 }
 
 .favoritosCont {
-  flex: 1;
+
   display: flex;
   flex-direction: column;
   background-color: #F4B1D2;
   margin-bottom: 2%;
+  margin-left: 2.5%;
+  top: 0px;
+  width: 1020px;
+  height: 540px;
 }
