--- a/oyl/src/components/Favoritos/Favoritos.css
+++ b/oyl/src/components/Favoritos/Favoritos.css
@@ -1,5 +1,6 @@
 .favoritos-container {
     display: flex;
+    position: relative;
     justify-content: center;
     margin-top: 20px;
     filter: drop-shadow(0px 4px 8.5px rgba(0, 0, 0, 0.25)) drop-shadow(2px 0px 8px rgba(0, 0, 0, 0.25));
@@ -7,22 +8,27 @@
     right: 0%;
     top: 0%;
     bottom: 0%; 
-
-
-  }
+    }
   
   .favoritos-row {
     display: flex;
+    margin-top: 0%;
   }
   
   .favoritos-col {
     width: 25%;
     margin: 0 10px;
+    
   }
   .flor{
+    position: absolute;
     display: flex;
-    top: -900%;
-    left: 50%;
+    height:30%;
+    width:6%;
+    left: 3%;
+    right: 90.91%;
+    top: 1%;
+    bottom: 76.4%;
     transform: translate(-50%, -50%);
     z-index: 1;
   }
