--- a/oyl/src/components/Item/Item.css
+++ b/oyl/src/components/Item/Item.css
@@ -1,17 +1,14 @@
-.cardhover{
-    box-sizing: border-box;
-    left: 0%;
-    right: 0%;
-    top: 0%;
-    bottom: 0%;
-    border: 3px solid #FF5601;
-    
-    /* Sombra */
-    filter: drop-shadow(0px 4px 8.5px rgba(0, 0, 0, 0.25)) drop-shadow(2px 0px 8px rgba(0, 0, 0, 0.25));
 
-}
-.img-fluid {
-  width: 100%;
-  height: 100%;
-
-}
+  .card-img-top{
+display:flex;
+left: 0%;
+right: 0%;
+top: 0%;
+bottom: 0%;
+/* Sombra */
+filter: drop-shadow(0px 4px 8.5px rgba(0, 0, 0, 0.25)) drop-shadow(2px 0px 8px rgba(0, 0, 0, 0.25));
+  }
+  .custom-image-size {
+    width: 100px; /* Set your desired width */
+    height: 150px; /* Set your desired height */
+  }
