--- a/oyl/src/components/Footer/Footer.css
+++ b/oyl/src/components/Footer/Footer.css
@@ -1,5 +1,8 @@
-.center{
+.place{
     width:1280px;
-    margin-left:0%
-    background-color: red;
+
+    background-color: #F5CFA2;
+}
+.cont-2{
+    background-color: #FAE6CE;
 }
