--- a/oyl/src/components/Container/Container.css
+++ b/oyl/src/components/Container/Container.css
@@ -1,6 +1,9 @@
 .container {
   display: flex;
+  align-items: center; /* horizontally center the content */
+  justify-content: center; 
   flex-direction: column;
+  margin-left: 10%;
   margin-top: 5%;
   margin-bottom: 20px;
   position: relative;
@@ -19,12 +22,12 @@
 }
 
 .favoritosCont {
-
+  margin-left: 10%;
   display: flex;
   flex-direction: column;
   background-color: #F4B1D2;
   margin-bottom: 2%;
-  margin-left: 2.5%;
+  color: #F5037C;
   top: 0px;
   width: 1020px;
   height: 540px;
