--- a/oyl/src/components/Favoritos/Favoritos.css
+++ b/oyl/src/components/Favoritos/Favoritos.css
@@ -12,7 +12,7 @@
   
   .favoritos-row {
     display: flex;
-    margin-top: 0%;
+    margin-top: -2%;
   }
   
   .favoritos-col {
@@ -31,4 +31,25 @@
     bottom: 76.4%;
     transform: translate(-50%, -50%);
     z-index: 1;
+  }
+  .smile{
+    position: absolute;
+    display: flex;
+    height:20%;
+    width:6%;
+    left:97%;
+    top:99%;
+    transform: translate(-50%, -50%);
+    z-index: 1;
+  }
+
+  .with-shadow {
+    filter: drop-shadow(0px 4px 8.5px rgba(0, 0, 0, 0.25)) drop-shadow(2px 0px 8px rgba(0, 0, 0, 0.25));
+    /* Customize the shadow values as per your preference */
+    transition: filter 0.3s ease; /* Add transition for smooth effect */
+  }
+  
+  .with-shadow:hover {
+    filter: none;
+    /* Customize the hover shadow values as per your preference */
   }
