--- a/oyl/src/components/Item/Item.css
+++ b/oyl/src/components/Item/Item.css
@@ -1,18 +1,50 @@
+.card-img {
+  position: relative;
+  z-index: 1;
+  display: flex;
+  left: 0%;
+  right: 0%;
+  top: 0%;
+  bottom: 0%;
+  filter: drop-shadow(0px 4px 8.5px rgba(0, 0, 0, 0.25))
+    drop-shadow(2px 0px 8px rgba(0, 0, 0, 0.25));
+}
 
-  .card-img{
+.card-img:hover {
+  filter: none;
+}
 
-      position: relative;
-      z-index: 1;
+.custom-image-size {
+  width: 100px;
+  height: 150px;
+}
 
-display:flex;
-left: 0%;
-right: 0%;
-top: 0%;
-bottom: 0%;
-/* Sombra */
-filter: drop-shadow(0px 4px 8.5px rgba(0, 0, 0, 0.25)) drop-shadow(2px 0px 8px rgba(0, 0, 0, 0.25));
-  }
-  .custom-image-size {
-    width: 100px; /* Set your desired width */
-    height: 150px; /* Set your desired height */
-  }
+
+.modal-dialog {
+  background-color: #FF9D33;
+  width:867.09px;
+  height:548px;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 1;
+}
+
+
+.close-icon {
+  position: absolute;
+  right: 2%;
+  top: 3%;
+  bottom: 28.13%;
+  margin-left:90%;
+  width: 5%;
+  height: 5%;
+  background: none;
+  border: none;
+  font-size: 1.5rem;
+  cursor: pointer;
+  color: #F5037C;
+}
+
+
