--- a/oyl/src/components/Option/Option.css
+++ b/oyl/src/components/Option/Option.css
@@ -1,7 +1,13 @@
-.containerP{
-    margin-left: 10%;
-    width:1015px;
-    margin-top: 5%;
+.cardhoverP {
+    width: 1015px;
+    font-family: 'Poppins';
+    font-style: normal;
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 18px;
+    color: #101010;
+}
+.containerP {
     background-color: #FFE5F2;
     display: flex;
     justify-content: center;
@@ -9,61 +15,49 @@
     padding: 50px 69px;
     gap: 10px;
     box-shadow: 0px 4px 8.5px rgba(0, 0, 0, 0.25), 2px 0px 8px rgba(0, 0, 0, 0.25);
-  }
-  
-  .contentColumn h1 {
-    font-family: 'Poppins';
-font-style: normal;
-font-weight: 600;
-font-size: 20px;
-line-height: 60px;
-text-align: left !important;
-  }
-.contentColumn p{
-    font-family: 'Poppins';
-font-style: normal;
-font-weight: 400;
-font-size: 12px;
-line-height: 18px;
-color: #101010;
-text-align: left !important;
 }
 
-.centered-text{
-    text-align: center;
-    font-family: 'Poppins';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 12px;
-    line-height: 18px;
-    color: #101010;
-    max-width: 743px;
+.contentColumn h1 {
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 60px;
+    text-align: left !important;
 }
-  
-  @media (max-width: 1024px) {
+
+.contentColumn p {
+    text-align: left !important;
+}
+
+.centered-text {
+    width: 743px;
+}
+
+@media (max-width: 1024px) {
     .imf {
-      width: 1024px;
+        width: 1024px;
     }
+
     .responsive-image {
-      width: 1024px;
+        width: 1024px;
     }
-  }
-  
-  @media (max-width: 768px) {
+}
+
+@media (max-width: 768px) {
     .imf {
-      width: 768px;
+        width: 768px;
     }
+
     .responsive-image {
-      width: 768px;
+        width: 768px;
     }
-  }
-  
-  @media (max-width: 640px) {
+}
+
+@media (max-width: 640px) {
     .imf {
-      width: 640px;
+        width: 640px;
     }
+
     .responsive-image {
-      width: 640px;
+        width: 640px;
     }
-  }
-  
+}
