--- a/oyl/src/components/Container/Container.css
+++ b/oyl/src/components/Container/Container.css
@@ -3,13 +3,11 @@
   align-items: center; /* horizontally center the content */
   justify-content: center; 
   flex-direction: column;
-
   margin-top: 5%;
-
   position: relative;
   width: 100%;
   height: auto;
-  margin-left: 0% !important;
+  margin-left: 15% !important;
   margin-bottom: 0%!important ;
   background-color: white;
 }
@@ -24,7 +22,7 @@
 }
 
 .favoritosCont {
-  margin-left: 10%;
+  margin-left: 15%;
   display: flex;
   flex-direction: column;
   background-color: #F4B1D2;
@@ -37,7 +35,7 @@
 
 .responsive-image{
     height: 587px;
-    width: 1280px;
+    width: 100%;
   }
 
 
