--- a/oyl/src/components/Modal/Modal.css
+++ b/oyl/src/components/Modal/Modal.css
@@ -1,4 +1,5 @@
-.modal {
+.custom-modal{
+  margin-left: 10%;
     z-index: 1;
   }
   
@@ -7,7 +8,7 @@
     right: 2%;
     top: 3%;
     bottom: 28.13%;
-    margin-left:90%;
+    margin-left:10%;
     width: 5%;
     height: 5%;
     background: none;
@@ -17,4 +18,50 @@
     color: #F5037C;
   }
 
-  
+  /* Modal.css */
+.modal-dialog {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
+
+  margin: 0 auto;
+}
+
+.modal-content {
+  width: 868px;
+  height: 548px;
+}
+.modal-body {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0;
+}
+
+.close-icon {
+  color: #101010;
+  cursor: pointer;
+  font-size: 24px;
+}
+
+.modal-image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.close-icon {
+  position: absolute;
+  right: 2%;
+  top: 3%;
+  bottom: 28.13%;
+  margin-left:90%;
+  width: 5%;
+  height: 5%;
+  background: none;
+  border: none;
+  font-size: 1.5rem;
+  cursor: pointer;
+  color: #F5037C;
+}
