--- a/oyl/src/components/Option/Option.css
+++ b/oyl/src/components/Option/Option.css
@@ -6,6 +6,9 @@
     font-weight: 400;
     line-height: 18px;
     color: #101010;
+    margin-top: 5%;
+    margin-left: 15%;
+
 
 }
 .containerP {
