--- a/oyl/src/components/Item/Item.css
+++ b/oyl/src/components/Item/Item.css
@@ -26,35 +26,10 @@
   width: 100px;
   height: 150px;
 }
-
-
-.modal-dialog {
-  background-color: #FF9D33;
-  width:867.09px;
-  height:548px;
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  z-index: 1;
+.modalContent{
+  background-color: red;
+  max-width: 868px;
+  max-height: 548px;
 }
 
-.close-icon {
-  position: absolute;
-  right: 2%;
-  top: 3%;
-  bottom: 28.13%;
-  margin-left:90%;
-  width: 5%;
-  height: 5%;
-  background: none;
-  border: none;
-  font-size: 1.5rem;
-  cursor: pointer;
-  color: #F5037C;
-}
-.card-img{
-
-  width: 100%;
-}
 
