--- a/oyl/src/components/Modal/Modal.css
+++ b/oyl/src/components/Modal/Modal.css
@@ -1,48 +1,27 @@
-.custom-modal{
-  margin-left: 10%;
-    z-index: 1;
-  }
-  
-  .close-icon {
-    position: absolute;
-    right: 2%;
-    top: 3%;
-    bottom: 28.13%;
-    margin-left:10%;
-    width: 5%;
-    height: 5%;
-    background: none;
-    border: none;
-    font-size: 1.5rem;
-    cursor: pointer;
-    color: #F5037C;
-  }
-
-  /* Modal.css */
-.modal-dialog {
+.custom-modal {
   display: flex;
   align-items: center;
   justify-content: center;
-  min-height: 100vh;
+  height: 100vh;
+  width: 100vw;
+  z-index: 1;
+}
 
-  margin: 0 auto;
+.modal-dialog {
+  margin: 0;
+  max-width: 868px;
+  max-height: 548px;
+  background-color: #FF9D33;
+  border:none !important;
 }
 
 .modal-content {
-  width: 868px;
-  height: 548px;
-}
-.modal-body {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding: 0;
+  width: 100%;
+  height: 100%;
 }
 
-.close-icon {
-  color: #101010;
-  cursor: pointer;
-  font-size: 24px;
+.modal-body {
+  padding: 0;
 }
 
 .modal-image {
@@ -55,13 +34,16 @@
   position: absolute;
   right: 2%;
   top: 3%;
-  bottom: 28.13%;
-  margin-left:90%;
   width: 5%;
   height: 5%;
   background: none;
   border: none;
   font-size: 1.5rem;
   cursor: pointer;
-  color: #F5037C;
+  color: #F5037C !important;
+}
+.custom-modal .modal-dialog {
+  max-width: 868px;
+  max-height: 548px;
+  margin: 0 auto;
 }
