--- a/oyl/src/App.css
+++ b/oyl/src/App.css
@@ -11,3 +11,23 @@
   grid-template-columns: repeat(4, 1fr); /* Adjust the number of columns as needed */
   grid-gap: 0rem; /* Adjust the gap between columns */
 }
+
+@media only screen and (max-width: 320px){
+  header{
+    width: 100%;
+    height: 100%;
+  }
+  
+  nav{
+    display: flex;
+    flex-wrap: wrap;
+    height: 240px;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+  }
+
+  #retrato{
+    height: 275px;
+  }
+}
