--- a/oyl/src/components/Container/Container.css
+++ b/oyl/src/components/Container/Container.css
@@ -38,6 +38,23 @@
     width: 100%;
   }
 
-
-
-  
+  @media only screen and (max-width: 320px){
+    .container {
+      margin: 0%;
+      position: relative;
+      width: 100%;
+      height: auto;
+      margin-left: 0% !important;
+      margin-bottom: 0%!important ;
+    }
+    .itemCont{
+      width: 250px;
+    }
+    .favoritosCont {
+      margin-left: 1%;
+      margin-bottom: 0%;
+      top: 0px;
+      width: 300px;
+      height: 200px;
+    }
+  }  
