--- a/oyl/src/components/FAQS/FAQS.css
+++ b/oyl/src/components/FAQS/FAQS.css
@@ -6,4 +6,10 @@
     width: 100%;
   }
 
+  @media only screen and (max-width: 320px){
+    .responsive-image {
+      height: 200px;
+    }
+  }
+
   
