--- a/oyl/src/components/Favoritos/Favoritos.css
+++ b/oyl/src/components/Favoritos/Favoritos.css
@@ -52,3 +52,11 @@
     filter: none;
     /* Customize the hover shadow values as per your preference */
   }
+
+  @media only screen and (max-width: 320px){
+    .favoritos-col {
+      width: 23%;
+      margin: 1px 1px; 
+    }
+
+  }
