--- a/oyl/src/components/Option/Option.css
+++ b/oyl/src/components/Option/Option.css
@@ -8,8 +8,6 @@
     color: #101010;
     margin-top: 5%;
     margin-left: 15%;
-
-
 }
 .containerP {
     background-color: #FFE5F2;
@@ -68,4 +66,44 @@
     .responsive-image {
         width: 640px;
     }
+}
+
+@media only screen and (max-width: 320px){
+    .containerP{
+    padding: 0px 0px;
+    gap: 0px;
+    height: 500px;
+    width: 300px;
+    }
+
+    .cardhoverP {
+        width: 10%;
+        margin-top: 1%;
+        margin-left: 1%;
+    }
+
+    .imgCard{
+        width:100%;
+        height:100%;
+    }
+
+    .contentColumn h1 {
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 10px;
+    
+}
+
+.contentColumn p {
+    font-size: 10px;
+    line-height: 10px;
+    
+
+}
+
+.centered-text {
+    width: 250px;
+    height: 90px;
+}
+
 }
