--- a/oyl/src/components/OptionList/OptionList.css
+++ b/oyl/src/components/OptionList/OptionList.css
@@ -1,3 +1,10 @@
 .cardsPF{
     margin-left:-1%;
 }
+
+@media only screen and (max-width: 320px){
+    .cardsPF{
+        margin-left:-1%;
+    }
+
+}
