--- a/oyl/src/App.css
+++ b/oyl/src/App.css
@@ -14,20 +14,23 @@
 
 @media only screen and (max-width: 320px){
   header{
-    width: 100%;
+    width: 320px;
     height: 100%;
   }
   
   nav{
     display: flex;
     flex-wrap: wrap;
-    height: 240px;
+    height: 245px;
+    width: 320px;
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
+    padding-bottom: 4px;
   }
 
   #retrato{
     height: 275px;
+    width: 320px;
   }
 }
