--- a/oyl/src/components/Container/Container.css
+++ b/oyl/src/components/Container/Container.css
@@ -48,13 +48,16 @@
       margin-bottom: 0%!important ;
     }
     .itemCont{
-      width: 250px;
+      width: 320px;
+      margin: 0px;
+      margin-top: 10px;
+      padding: auto;
     }
     .favoritosCont {
-      margin-left: 3%;
+      margin-left: 2%;
       margin-bottom: 0%;
       top: 0px;
       width: 300px;
       height: 200px;
     }
-  }  
+  }
