--- a/oyl/src/components/Footer/Footer.css
+++ b/oyl/src/components/Footer/Footer.css
@@ -182,8 +182,11 @@ p {
 }
 /*Media 320*/
 @media (max-width: 320px){
+.footer{
+  width: 320px;
+}
 .line-container{
-  width: 100%;
+  width: 320px;
   max-width: 320px;
   height: 110px;
 }
