--- a/oyl/src/components/Option/Option.css
+++ b/oyl/src/components/Option/Option.css
@@ -75,11 +75,15 @@
     height: 500px;
     width: 300px;
     }
+    .containerPF{
+        width: 320px;
+        padding: auto;
+    }
 
     .cardhoverP {
         width: 10%;
-        margin-top: 1%;
-        margin-left: 1%;
+        margin-top: 2%;
+        margin-left: 4%;
     }
 
     .imgCard{
