--- a/oyl/src/App.css
+++ b/oyl/src/App.css
@@ -3,7 +3,7 @@
   min-height: 100vh;
   margin: 0 auto;
   background-color: white;
-  text-align: center;
+  text-align: center;  
 }
 .footer-container {
   height:284px;
@@ -13,16 +13,18 @@
 }
 
 @media only screen and (max-width: 320px){
+
   header{
     width: 320px;
     height: 100%;
+ 
   }
   
   nav{
     display: flex;
     flex-wrap: wrap;
     height: 245px;
-    width: 320px;
+    width: 100%;
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
