--- a/oyl/src/components/Modal/Modal.css
+++ b/oyl/src/components/Modal/Modal.css
@@ -2,6 +2,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  margin-top: 6%;
   height: 100vh;
   width: 100vw;
   z-index: 1;
@@ -46,4 +47,14 @@
   max-width: 868px;
   max-height: 548px;
   margin: 0 auto;
+}
+
+
+@media only screen and (max-width: 360px) {
+  .custom-modal {
+    margin-top: 50%;
+    height: 100vh;
+    width: 100vw;
+    z-index: 1;
+  }
 }
