--- a/oyl/src/components/Navbar/Navbar.css
+++ b/oyl/src/components/Navbar/Navbar.css
@@ -7,6 +7,9 @@ header {
   margin-bottom: -1.5%;
   background-color: #FAE6CE;
 }
+#retrato{
+  margin-top: 9%;
+ }
 nav{
   height:20vh;
 }
@@ -83,14 +86,15 @@ font-family: 'Poppins';
   margin-left: 110%;
 }
 .open-menu{
-margin-top: 50%;
-margin-left: -1500%;
+margin-top: 0%;
+margin-left: -5%;
   color: #F5037C;
   font-size: 1.5rem;
 }
 .close-menu {
-  margin-top: -20%;
-  margin-left: -1500%;
+  display: none;
+  margin-top: -15%;
+  margin-left: 0%;
     color: #F5037C;
     font-size: 1.5rem;
   }
@@ -114,32 +118,19 @@ margin-left: -1500%;
   list-style: none;
 }
 .logo img {
-
+  margin-left: 40%;
   padding-top: 1%;
   display: absolute;
   margin-bottom: 2%;
   width: 15%;
   height: 120px;
-  margin-left:-8%;
-  animation: movedown 1s linear 1;
-  animation-delay: 0.5s;
-  animation-fill-mode: forwards;
-  visibility: hidden;
-}
-@keyframes movedown {
-  0% {
-    transform: translateY(-100px);
-    visibility: visible;
-  }
 
-  100% {
-    transform: translateY(0);
-    visibility: visible;
-  }
+
 }
 
 
-@media only screen and (max-width: 320px) {
+
+@media only screen and (max-width: 360px) {
   /* Navbar.css */
 header {
   position: fixed;
@@ -226,21 +217,19 @@ header {
   }
   .inicio {
     margin-left: 10%;
-    margin-top: 1000%;
+    margin-top:-30%;
     margin-bottom: 0%;
 
   }
   .produNav{
-    margin-top: 80%;
-    margin-bottom: 60%;
+    margin-top: 30%;
+    margin-bottom: 30%;
     margin-left: 10%;
   }
   .pregFrec{
-    margin-bottom: 90%;
+    margin-bottom: 150%;
     margin-left: 10%;
   }
- #retrato{
-  margin-top: 10%;
- }
+
 }
 
