--- a/oyl/src/components/whatsApp/whatsApp.css
+++ b/oyl/src/components/whatsApp/whatsApp.css
@@ -1,34 +1,33 @@
 .whatsapp-container {
-    position: fixed;
-    background-color: red;
-    bottom: 20px;
-    right: 20px;
-    z-index: 9999;
-  }
-  #hijo_uno{
-    display:inline-block;
-    height: 10%;
-    width: 6%;
-    position: fixed;
-    bottom: 50px;
-    right: 20px;
-  }
-  
-  img{
-    width: 100%;
-    height: 100%;
+  position: fixed;
+  bottom: 20;
+  right: 20px;
+  z-index: 9999;
+}
+
+#hijo_uno {
+  display: inline-block;
+  height: 10%;
+  width: 6%;
+  position: fixed;
+  bottom: 50px;
+  right: 20px;
+}
+
+img {
+  width: 100%;
+  height: 100%;
+}
+
+@media only screen and (max-width: 360px) {
+  .whatsapp-container {
+    top: 20%;
   }
 
-  @media only screen and (max-width: 360px){
-    .whatsapp-container {
-      position: fixed;
-      bottom: 20px;
-      right: 20px;
-      z-index: 9999;
-    }
-  
-    #hijo_uno{
-      width: 45px;
-      height: 45px;
-    }
+  #hijo_uno {
+    top:27%;
+    margin-right: -3%;
+    width: 45px;
+    height: 45px;
   }
+}
